--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                             <span class="fs-4 text-white mb-5 text" id="text2">
                                 <i class="fas fa-star fs-5"></i> 4.5 Google Rating
                             </span>
-                            <span class="fs-4 text-white mb-5 text" id="text3">
+                            <!-- <span class="fs-4 text-white mb-5 text" id="text3">
                                 <i class="fas fa-rupee-sign fs-5"></i> Cost-Effective Tours
-                            </span>
+                            </span> -->
                         </div>
 
 
