--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
                                     onclick="showDialog(
                                         'Varanasi', 
                                         'img/package-2.jpg', 
-                                        'Kashmir – a Himalayan paradise of serene beauty. Discover its majestic peaks and peaceful lakes.', 
+                                        'Embark on a mesmerizing journey to the spiritual capital of India with our unforgettable 5 Days Varanasi trip. Immerse yourself in the vibrant tapestry of this ancient city, where tradition, spirituality, and culture intertwine to create a truly enchanting experience.Throughout your journey, our knowledgeable guides will provide insights into Varanasis history, spirituality, and cultural nuances, ensuring an immersive and enriching experience. So, come and let the spiritual aura of Varanasi captivate your senses as you embark on this unforgettable 5 day adventure.', 
                                         '8400',
-                                        'abc',
-                                        'xyz',
-                                        'hfhfh',
-                                        'akshay. akash. gitrish. gunjan patil. meet girish patil.')">Book Now</a>
+                                        '15th - 20th December. 29th - 03rd January (New year sepcial)',
+                                        'Witness the mesmerizing Ganga Aarti ceremony, held every evening at the Dashashwamedh Ghat. Take a boat ride along the sacred Ganges River during sunrise. Kashi Vishwanath Temple: Visit one of the holiest Hindu temples in India, dedicated to Lord Shiva. Sarnath: Sarnath is an essential Buddhist pilgrimage site.  Take a stroll through the narrow and winding lanes of the old city, known as the Galis. Silk factory tour & Shop for exquisite Banarasi silk sarees. The delicious street food of Varanasi. Explore Banaras Hindu University and Bharat Kala Bhawan. Delicious Breakfast, Lunch & Dinner',
+                                        'Travel from Mumbai to Varanasi & Varanasi to Mumbai by Non-AC Sleeper Train. 2 Night Accommodation in our coolest stay in Varanasi.(Double, Triple, Quad Sharing). Grand Ganga Aarti at Ghats. Comfortable transport to explore Sarnath. (Autos). Bonfire and Music wherever possible. All entry charges. First aid kit and medical assistance. NOMADIC SAFAR expertise',
+                                        'Train meals and any other personal expenses. Extra food and drink ordered. Anything other than above mentioned inclusions.')">Book Now</a>
                             </div>
 
                         </div>
