date format change

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                         'Varanasi, also known as Kashi or Banaras, is one of the oldest living cities in the world. Located on the banks of the holy river Ganga, Varanasi is the spiritual heart of India, where traditions, rituals, culture, and history converge. From sacred ghats and ancient temples to vibrant markets and soulful Ganga aartis, the city offers a deeply enriching experience.', 
                                         'Our scheduled group batches are designed to provide a well-organized, culturally immersive, and spiritually uplifting experience of this sacred city. Perfect for travelers who want to explore Varanasi’s essence without the hassle of planning.',
                                         '₹ 9,999.00/- Per person',
-                                        '3rd to 8th Sept | 1st to 6th Oct | 8th to 13th Nov | (Price may fluctuate according to peak festivals)',
+                                        '3rd - 8th Sept | 1st - 6th Oct | 8th - 13th Nov | (Price may fluctuate according to peak festivals)',
                                         '🗓️ Fixed and flexible batch dates to suit your schedule | 📿 Authentic Varanasi experience with handpicked spots | 🧳 End-to-end trip planning and local assistance | 🧘 Emphasis on safety, comfort, and spiritual exploration | 💬 24x7 customer support and real-time coordination',
                                         'Pilgrims, history and culture enthusiasts, students, photographers, spiritual travelers, families, and senior citizens.',
                                         'Mumbai ↔️ Varanasi Junction (to & fro - Non-AC Sleeper & 3AC options)',
@@ -385,7 +385,7 @@
                                     style="color: #FE8800 !important;"></i>Coorg</small>
                             <small class="flex-fill text-center border-end py-2" style="color: #000000; font-family: 'Albra', serif;"><i
                                     class="fa fa-calendar-alt text-primary me-2"
-                                    style="color: #FE8800 !important;"></i>3 Days | 2 Nights</small>
+                                    style="color: #FE8800 !important;"></i>5Days | 4 Nights</small>
                             <small class="flex-fill text-center py-2" style="color: #000000; font-family: 'Albra', serif;"><i class="fa fa-user text-primary me-2"
                                     style="color: #FE8800 !important;"></i>1 Person</small>
                         </div>
@@ -408,7 +408,7 @@
                                         'Located in Karnataka, Coorg (Kodagu) is one of South India’s most beautiful hill stations. Known for its rolling coffee plantations, dense forests, misty landscapes, waterfalls, and rich Kodava culture, Coorg is the ideal escape for nature lovers and adventure seekers alike.', 
                                         'We organize scheduled batch-wise group tours to Coorg throughout the year, specially designed to provide a perfect balance of relaxation, exploration, and adventure.',
                                         '₹ 7,799.00/- Per person',
-                                        '0th-14th July   |  07th-11th Aug | 14th-18th Aug   |  04th-08th Sep | 18th-22nd Sep  |   02nd-06th Oct',
+                                        '10th - 14th July   |  07th - 11th Aug | 14th - 18th Aug   |  04th - 08th Sep | 18th - 22nd Sep  |   02nd - 06th Oct',
                                         '🕐 Fixed and flexible batch dates | 👥 Small, comfortable group sizes| 🔐 Safe and secure travel arrangements | 📸 Opportunities for group fun, bonding, and memories | 💬 24x7 customer support and real-time coordination',
                                         'College students, working professionals, families, nature lovers, photography enthusiasts, and group travelers.',
                                         'Mumbai to Mangalore Junction (Non-AC: Sleeper Class or 3AC as per booking) | Mangalore to Mumbai (Non-AC Sleeper Class)',
