--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     </div>
     <!-- Spinner End -->
 
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark px-5 d-none d-lg-block">
         <div class="row gx-0">
@@ -76,7 +75,6 @@
         </div>
     </div>
     <!-- Topbar End -->
-
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
@@ -122,7 +120,7 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                        <h1 class="display-4 text-white mb-3 animated slideInDown" style="font-family: 'albra', serif;">Pack your bags, We'll pack the memories</h1>
+                        <h1 class="display-4 text-white mb-3 animated slideInDown" style="font-family: 'albra', serif;">Pack your bags, We'll pack the MEMORIES</h1>
                         <p class="fs-4 text-white mb-4 animated slideInDown" style="font-family: 'albra', serif;">Escape from your life’s “Suffer” to “Safar”
                         </p>
 
@@ -133,7 +131,7 @@
 
                         <div class="text-container mt-5">
                             <span class="fs-4 text-white mb-5 text" id="text1" style="font-family: 'Albra', serif;">
-                                <i class="fas fa-smile fs-5"></i> 100+ Happy Clients
+                                <i class="fas fa-smile fs-5"></i> 1,000+ Happy Clients
                             </span>
                             <span class="fs-4 text-white mb-5 text" id="text2" style="font-family: 'Albra', serif;">
                                 <i class="fas fa-star fs-5"></i> 4.5 Google Rating
@@ -171,12 +169,18 @@
                                 <div class="carousel-item active">
                                     <img src="img/wayanad_1.jpeg" class="d-block w-100" alt="Image 1">
                                 </div>
-                                <!-- <div class="carousel-item">
-                                    <img src="img/package-2.jpg" class="d-block w-100" alt="Image 2">
+                                <div class="carousel-item">
+                                    <img src="img/wayanad_2.jpeg" class="d-block w-100" alt="Image 2">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/package-3.jpg" class="d-block w-100" alt="Image 3">
-                                </div> -->
+                                    <img src="img/wayanad_3.jpeg" class="d-block w-100" alt="Image 3">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/wayanad_4.jpeg" class="d-block w-100" alt="Image 2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/wayanad_5.jpg" class="d-block w-100" alt="Image 3">
+                                </div>
                             </div>
 
                             <!-- Navigation buttons with custom-circle class -->
@@ -228,7 +232,7 @@
                                     style="background-color: #FE8800; color: #ffffff; border-radius: 30px 30px 30px 30px; font-family: 'Albra', serif;"
                                     onclick="showDialog(
                                         'Wayanad', 
-                                        'img/wayanad_1.jpeg', 
+                                        'img/wayanad_2.jpeg', 
                                         'Wayanad, located in the serene hills of northern Kerala, is a nature lover’s paradise. Known for its lush greenery, misty mountains, waterfalls, and wildlife, Wayanad offers a perfect getaway for those seeking peace, adventure, and natural beauty. Its rich tribal heritage, spice plantations, and forest trails make it a unique destination in South India.', 
                                         'Our Wayanad group tour batches are designed to offer a hassle-free, memorable, and immersive experience for travelers of all ages. With handpicked spots, curated activities, and well-planned itineraries, our trips ensure you enjoy the best of Wayanad without any stress.',
                                         '₹ 9,899.00/- Per person',
@@ -347,12 +351,21 @@
                                 <div class="carousel-item active">
                                     <img src="img/coorg_1.jpeg" class="d-block w-100" alt="Image 1">
                                 </div>
-                                <!-- <div class="carousel-item">
-                                    <img src="img/package-2.jpg" class="d-block w-100" alt="Image 2">
+                                <div class="carousel-item">
+                                    <img src="img/coorg_2.jpeg" class="d-block w-100" alt="Image 2">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/package-3.jpg" class="d-block w-100" alt="Image 3">
-                                </div> -->
+                                    <img src="img/coorg_3.jpg" class="d-block w-100" alt="Image 3">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/coorg_4.jpg" class="d-block w-100" alt="Image 2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/coorg_5.jpg" class="d-block w-100" alt="Image 3">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/coorg_6.jpg" class="d-block w-100" alt="Image 3">
+                                </div>
                             </div>
 
                             <!-- Navigation buttons with custom-circle class -->
@@ -404,7 +417,7 @@
                                     style="background-color: #FE8800; color: #ffffff; border-radius: 30px 30px 30px 30px; font-family: 'Albra', serif;"
                                     onclick="showDialog(
                                         'Coorg', 
-                                        'img/coorg_1.jpeg', 
+                                        'img/coorg_6.jpg', 
                                         'Located in Karnataka, Coorg (Kodagu) is one of South India’s most beautiful hill stations. Known for its rolling coffee plantations, dense forests, misty landscapes, waterfalls, and rich Kodava culture, Coorg is the ideal escape for nature lovers and adventure seekers alike.', 
                                         'We organize scheduled batch-wise group tours to Coorg throughout the year, specially designed to provide a perfect balance of relaxation, exploration, and adventure.',
                                         '₹ 7,799.00/- Per person',
@@ -497,7 +510,6 @@
     </div>
     <!-- Testimonial End -->
 
-
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -547,13 +559,12 @@
     </div>
     <!-- Service End -->
 
-
     <!-- Destination Start -->
     <div class="container-xxl py-5 destination">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center px-3" style="color: #000000; font-family: 'albra', serif;">Destination</h6>
-                <h1 class="mb-5" style="color: #000000; font-family: 'albra', serif;">Popular Destination</h1>
+                <h6 class="section-title bg-white text-center px-3" style="color: #000000; font-family: 'albra', serif;">Destinations</h6>
+                <h1 class="mb-5" style="color: #000000; font-family: 'albra', serif;">Popular Destinations</h1>
             </div>
             <div class="row g-3">
                 <div class="col-lg-7 col-md-6">
@@ -601,7 +612,6 @@
         </div>
     </div>
     <!-- Destination Start -->
-
 
     <!-- Process Start -->
     <div class="container-xxl py-5">
@@ -716,8 +726,6 @@
     </div>
     <!-- About End -->
 
-
-
     <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -762,7 +770,6 @@
         </div>
     </div>
     <!-- Team End -->
-
 
     <!-- Contact Start -->
     <div id="contact-us" class="container-xxl py-5">
@@ -824,7 +831,6 @@
     </div>
     <!-- Contact End -->
 
-
     <!-- Terms and condition Dialog -->
     <div id="termsModal" class="modal-overlay">
         <div class="modal-dialog">
@@ -882,8 +888,6 @@
     </div>
     <!-- End terms and condition-->
 
-
-    
     <!--Start package click more details-->
     <div id="infoDialog" class="dialog-overlay">
         <div class="dialog-box">
@@ -992,8 +996,6 @@
     </div>
 
     <!--End Package click more details-->
-
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
