--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                         customization.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0" style="color: #000000; font-family: 'albra', serif;"><i class="fa fa-arrow-right me-2" style="color: #FE8800;"></i>Bagpack trips
+                            <p class="mb-0" style="color: #000000; font-family: 'albra', serif;"><i class="fa fa-arrow-right me-2" style="color: #FE8800;"></i>Bagpacking trips
                             </p>
                         </div>
                         <div class="col-sm-6">
