--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
                                     style="color: #FE8800 !important;"></i>1 Person</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;" >₹ 9,899.00/-</h3>
+                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
+                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 9,899.00/-
+                              </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
                                 <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -311,7 +313,9 @@
                                     style="color: #FE8800 !important;"></i>1 Person</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;" >₹ 9,999.00/-</h3>
+                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
+                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 9,999.00/-
+                              </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
                                 <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -398,12 +402,14 @@
                                     style="color: #FE8800 !important;"></i>Coorg</small>
                             <small class="flex-fill text-center border-end py-2" style="color: #000000; font-family: 'Albra', serif;"><i
                                     class="fa fa-calendar-alt text-primary me-2"
-                                    style="color: #FE8800 !important;"></i>5 Days | 4 Nights</small>
+                                    style="color: #FE8800 !important;"></i>3 Days | 2 Nights</small>
                             <small class="flex-fill text-center py-2" style="color: #000000; font-family: 'Albra', serif;"><i class="fa fa-user text-primary me-2"
                                     style="color: #FE8800 !important;"></i>1 Person</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;" >₹ 7,799.00/-</h3>
+                            <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
+                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/-
+                              </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
                                 <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -730,7 +736,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center px-3" style="color: #000000; font-family: 'albra', serif;">ravel Guide</h6>
+                <h6 class="section-title bg-white text-center px-3" style="color: #000000; font-family: 'albra', serif;">Travel Guide</h6>
                 <h1 class="mb-5" style="color: #000000; font-family: 'albra', serif;">Meet Our Guide</h1>
             </div>
             <div class="row g-4 justify-content-center">
