--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 <div class="testimonial-item bg-white text-center border p-4">
                     <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-5.jpeg"
                         style="width: 80px; height: 80px;">
-                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Aditi Gawai</h5>
+                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Aaditi Gawai</h5>
                     <p>Mumbai</p>
                     <p class="mt-2 mb-0" style="color: #000000; font-family: 'Albra', serif;">Just got back from a backpacking trip to Coorg with Nomadic Safar, and honestly, it was such a refreshing escape! The whole experience was smooth, safe, and so well-organized. The itinerary had the right balance of sightseeing, relaxation, and fun - we never felt rushed, yet we saw so much.
 
@@ -702,7 +702,7 @@
                         customization.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0" style="color: #000000; font-family: 'albra', serif;"><i class="fa fa-arrow-right me-2" style="color: #FE8800;"></i>Bagpacking trips
+                            <p class="mb-0" style="color: #000000; font-family: 'albra', serif;"><i class="fa fa-arrow-right me-2" style="color: #FE8800;"></i>Backpacking trips
                             </p>
                         </div>
                         <div class="col-sm-6">
@@ -751,7 +751,7 @@
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0" style="color: #000000; font-family: 'albra', serif;">Prathmesh Suresh Dafle</h5>
+                            <h5 class="mb-0" style="color: #000000; font-family: 'albra', serif;">Prathamesh Suresh Dafle</h5>
                             <small style="color: #000000; font-family: 'Albra', serif;">Founder</small>
                         </div>
                     </div>
