--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
                                 <div class="carousel-item">
                                     <img src="img/varanasi_4.jpeg" class="d-block w-100" alt="Image 4">
                                 </div>
-                                <!-- <div class="carousel-item">
+                                <div class="carousel-item">
                                     <img src="img/varanasi_5.jpeg" class="d-block w-100" alt="Image 5">
                                 </div>
-                                <div class="carousel-item">
+                                <!-- <div class="carousel-item">
                                     <img src="img/varanasi_6.jpeg" class="d-block w-100" alt="Image 6">
                                 </div> -->
                             </div>
@@ -353,7 +353,7 @@
                         <div id="packageCarouselCoorg" class="carousel slide overflow-hidden" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="img/coorg_1.jpeg" class="d-block w-100" alt="Image 1">
+                                    <img src="img/coorg_1.jpg" class="d-block w-100" alt="Image 1">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="img/coorg_2.jpeg" class="d-block w-100" alt="Image 2">
@@ -469,9 +469,9 @@
                         Surely looking forward to book further trips with Nomadic Safar ❤️</p>
                 </div>
                 <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-2.jpeg"
+                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-3.jpeg"
                         style="width: 80px; height: 80px;">
-                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Kirti Mane</h5>
+                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Bhagyashree Kolge</h5>
                     <p>Pune</p>
                     <p class="mt-2 mb-0" style="color: #000000; font-family: 'Albra', serif;">This was my first back packing trip and it was an absolutely brilliant experience with memories that will last a lifetime.
 
@@ -481,9 +481,9 @@
                         </p>
                 </div>
                 <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-3.jpeg"
+                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-2.jpeg"
                         style="width: 80px; height: 80px;">
-                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Bhagyashree Kolge</h5>
+                    <h5 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">Kirti Mane</h5>
                     <p>Mumbai</p>
                     <p class="mt-2 mb-0" style="color: #000000; font-family: 'Albra', serif;">I recently traveled to Kashmir with Nomadic Safar and it was a wonderful experience overall. The trip was well-organized, with smooth transportation, comfortable accommodations, and a well-planned itinerary that allowed us to explore the breathtaking beauty of Kashmir.
                         
