--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
                                 <div class="carousel-item">
                                     <img src="img/varanasi_5.jpeg" class="d-block w-100" alt="Image 5">
                                 </div>
-                                <!-- <div class="carousel-item">
-                                    <img src="img/varanasi_6.jpeg" class="d-block w-100" alt="Image 6">
-                                </div> -->
+                                <div class="carousel-item">
+                                    <img src="img/varanasi_6.jpg" class="d-block w-100" alt="Image 6">
+                                </div>
                             </div>
 
                             <!-- Navigation buttons with custom-circle class -->
