--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px; font-family: 'Albra', serif;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Jogeshwari, Mumbai,
                         Maharashtra 400-060</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+91 8454 088 171</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+91 8454 088 171 / 9619 962 579</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>thenomadicsafar@gmail.com</small>
                 </div>
             </div>
@@ -244,6 +244,7 @@
                                         'Mumbai to Kozhikode (Non AC – SL / 3A) | Kozhikode to Mumbai (Non AC – SL / 3A)',
                                         '2 Nights in our beautiful stay | Dual/Triple Sharing Basis',
                                         '3 Breakfasts & 2 Dinners | Day 2: (B + D) | Day 3: (B + D) | Day 4: (B)',
+                                        '👥 Trip Leader Support - A friendly and experienced trip leader present throughout to manage the tour smoothly. | 🩺 Safety First - Basic first-aid kit will be available with the team for emergencies',
                                         'Thrilling Zipline in Wayanad | Private Transportation for Entire Tour | All Necessary Permits & Entry Fees Included | Friendly Trip Leader Throughout the Journey',
                                         'Train meals & personal expenses. |Jeep ride + entry charges to Glass Bridge (Approx ₹350–₹400). |Early hotel check-in. |Extra costs due to flight delays, landslides, roadblocks, etc. |Any additional accommodation/food due to delays. |Anything not mentioned in the “Inclusions” section')">Book Now</a>
                             </div>
@@ -339,7 +340,8 @@
                                         'Mumbai ↔️ Varanasi Junction (to & fro - Non-AC Sleeper & 3AC options)',
                                         '3 Nights in our coolest stay | Dual/Triple sharing basis',
                                         '3 Breakfast, 1 Lunch & 2 Dinner | Day 2: B + D | Day 3: B + L + D | Day 4: B',
-                                        'Entry tickets & all necessary permits | Energetic Trip Leader throughout the journey!',
+                                        'Entry tickets & all necessary permits | Energetic trip leader throughout the journey!',
+                                        'Mesmerizing Ganga Aarti | Boat ride on Sacred Ganga | Exploring Ancient Ghats | Savoring local cuisine | Temple Trails | Shopping for Slik & Crafts | Discovering Sarnath',
                                         'Train meals & personal expenses | Early hotel check-in | Costs due to delays, weather issues, or cancellations | Extra stay/meals due to travel changes | Anything not mentioned in Inclusions')">Book Now</a>
                             </div>
                         </div>
@@ -434,6 +436,7 @@
                                         '2 nights stay in a scenic and comfortable property on a dual/triple sharing basis',
                                         '3 Breakfast & 2 Dinner | Day 2: Breakfast + Dinner | Day 3: Breakfast + Dinner | Day 4: Breakfast',
                                         '🚐 Private Transportation - Exclusive vehicle for all local sightseeing and transfers during the trip | 🛂 Permits & Entry Fees - All necessary local permits and entry charges to sightseeing points | 👥 Trip Leader Support - A friendly and experienced trip leader present throughout to manage the tour smoothly. | 🩺 Safety First - Basic first-aid kit will be available with the team for emergencies',
+                                        '🐘 Visit to Elephant Camp | ☕ Spice Garden Tour & Coffee Tasting| 🚙 Offbeat Jeep Safari |🌲 Nature Walks & Serene Views | 🍷 Wine Tasting Experience  |🛕 Omkareshwar & Gokarnanat Temple',
                                         '🍛 Meals during train journeys or any personal food/drink purchases beyond the included meals | 🚙 Jeep ride to Mandalpatti viewpoint (Approx. ₹500–₹550 per person – payable on the spot) | 🕓 Early hotel check-in (subject to availability and extra charges) | ✈️ Travel delays or disruptions due to natural calamities like landslides, roadblocks, flight/train cancellations | 🛏️ Any extra accommodation or food costs arising from delayed travel or unforeseen events | 📋 Any other services not explicitly mentioned in the Inclusions list above')">Book Now</a>
                             </div>
                         </div>
@@ -806,7 +809,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="color: black" style="font-family: 'albra', serif;">Mobile</h5>
-                            <p class="mb-0" style="font-family: 'albra', serif;">+91 8454 088 171</p>
+                            <p class="mb-0" style="font-family: 'albra', serif;">+91 8454 088 171 / 9619 962 579</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
@@ -975,6 +978,12 @@
                 </div>
 
                 <div>
+                    <h4 style="font-size: 18px; font-family: 'Albra', serif;">🎫 Additional Inclusions:</h4>
+                    <ul id="dialog-additional" style="color: #000000; font-family: 'Albra', serif;"></ul>
+                </div>
+
+
+                <div>
                     <h4 style="font-size: 18px; font-family: 'Albra', serif;">🌄 Activities & Experiences</h4>
                     <ul id="dialog-activities" style="color: #000000; font-family: 'Albra', serif;"></ul>
                 </div>
@@ -1018,7 +1027,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3" style="font-family: 'albra', serif;">Contact</h4>
                     <p class="mb-2" style="font-family: 'albra', serif;"><i class="fa fa-map-marker-alt me-3"></i>Jogeshwari, Mumbai 400-060</p>
-                    <p class="mb-2" style="font-family: 'albra', serif;"><i class="fa fa-phone-alt me-3"></i>+91 8454 088 171</p>
+                    <p class="mb-2" style="font-family: 'albra', serif;"><i class="fa fa-phone-alt me-3"></i>+91 8454 088 171 / 9619 962 579</p>
                     <p class="mb-2" style="font-family: 'albra', serif;"><i class="fa fa-envelope me-3"></i>thenomadicsafar@gmail.com</p>
                     <div class="d-flex pt-2">
                         <!-- <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a> -->
