background img change

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <i class="fas fa-smile fs-5"></i> 1,000+ Happy Clients
                             </span>
                             <span class="fs-4 text-white mb-5 text" id="text2" style="font-family: 'Albra', serif;">
-                                <i class="fas fa-star fs-5"></i> 4.5 Google Rating
+                                <i class="fas fa-star fs-5"></i> 5 Google Rating
                             </span>
                             <!-- <span class="fs-4 text-white mb-5 text" id="text3">
                                 <i class="fas fa-rupee-sign fs-5"></i> Cost-Effective Tours
@@ -506,7 +506,7 @@
                         </div>
                         <div class="text-center p-4">
                             <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
-                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/-
+                                <!-- <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/- -->
                               </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -524,8 +524,8 @@
                                         'img/udupi_2.jpeg', 
                                         'Think sun-kissed shores, heritage temples, and island secrets... Welcome to Udupi – the coastal soul of Karnataka. From the spiritual chants of the Krishna temple to the rhythmic waves at Malpe Beach, Udupi blends culture, calm, and coastline like nowhere else. This isn’t just a trip. It’s a reset. A reboot. A chance to drift with the tide and find yourself along the shore.', 
                                         'Not your regular checklist – this is coastal living, unfiltered. | 🏝️ St. Mary’s Island Drift | 🍱 Temple Town Taste Tour | 🏖️ Malpe Mornings & Kaup Sunsets | 🛕 Sri Krishna Temple Darshan | 🎶 Folk Tales & Chill Evenings | 🌊 Zen by the Waves ',
-                                        '₹ 7,799.00/- Per person',
-                                        ' 26th - 30th Sep |  1st - 05th Oct | 11th - 15th Oct   |  31st Oct - 04th Nov | 6th - 10th Nov | 20th - 24th Dec | 25th - 29th Dec',
+                                        '',
+                                        'coming soon',
                                         '🎒 We don’t just take you there – we let you live it. | 🏡 Cozy stays amidst nature & local warmth | 👫 Small groups for big connections – no rushed tours | 🌐 Hassle-free planning & safe routes | 🎉 Every trip packed with moments, memories & magic',
                                         'Backpackers chasing hidden gems | Nature seekers & adventure junkies | Workaholics in need of a soul cleanse | Culture enthusiasts & story collectors | Photographers in search of epic frames',
                                         'Mumbai ↔️ Udupi (to & fro - Non-AC Sleeper & 3AC options)',
@@ -601,7 +601,7 @@
                         </div>
                         <div class="text-center p-4">
                             <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
-                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/-
+                                <!-- <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/- -->
                               </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -619,8 +619,8 @@
                                         'img/meghalaya_2.jpeg', 
                                         'Rolling clouds, emerald valleys, and waterfalls that never seem to end... Welcome to Meghalaya – the “Abode of Clouds.” From the living root bridges of Cherrapunji to the sparkling waters of Dawki, Meghalaya is nature’s poetry in motion. This isn’t just a trip. It’s wonder redefined. A journey where every mist-kissed trail whispers a story.', 
                                         'We don’t just take you there – we let you live it. Cozy stays amidst nature & local warmth. Small groups for big connections – no rushed tours. Hassle-free planning & safe routes. Every trip packed with moments, memories & magic',
-                                        '₹ 7,799.00/- Per person',
-                                        '5th - 20th Oct | 1st - 06th Nov | 12th - 17th Nov | 24th - 29th Dec | 2nd - 7th Jan | 18th - 23rd Jan',
+                                        '',
+                                        'coming soon',
                                         '🎒 We don’t just take you there – we let you live it. | 🏡 Cozy stays amidst nature & local warmth | 👫 Small groups for big connections – no rushed tours | 🌐 Hassle-free planning & safe routes | 🎉 Every trip packed with moments, memories & magic',
                                         'Backpackers chasing hidden gems | Nature seekers & adventure junkies | Workaholics in need of a soul cleanse | Culture enthusiasts & story collectors | Photographers in search of epic frames',
                                         'Flights to Guwahati (on your own) | From Guwahati ↔️ Meghalaya – Comfortable tempo traveller/AC vehicle for the group',
@@ -693,7 +693,7 @@
                         </div>
                         <div class="text-center p-4">
                             <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
-                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/-
+                                <!-- <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/- -->
                               </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -711,8 +711,8 @@
                                         'img/hampi_2.jpeg', 
                                         'Step into a land where every boulder whispers history and every ruin tells a story… Welcome to Hampi – the ancient soul of Karnataka. From the grandeur of the Vijayanagara Empire to the calm of Tungabhadra’s banks, Hampi is heritage, adventure, and serenity rolled into one. This isn’t just a trip. It’s time travel. A walk through history, a pause in the present, and a memory that lingers forever.', 
                                         'We don’t just take you there – we let you live it. Cozy stays amidst nature & local warmth. Small groups for big connections – no rushed tours. Hassle-free planning & safe routes. Every trip packed with moments, memories & magic',
-                                        '₹ 7,799.00/- Per person',
-                                        '5th - 20th Oct | 1st - 06th Nov | 12th - 17th Nov | 24th - 29th Dec | 2nd - 7th Jan | 18th - 23rd Jan',
+                                        '',
+                                        'coming soon',
                                         '🎒 We don’t just take you there – we make you live it. | 🏡 Heritage-style cozy stays with local warmth | 👫 Small, chill groups – no touristy rush | 🌐 Real-time coordination + safe routes | 🎉 Every trip filled with stories, sunsets & hidden gems',
                                         'History buffs & culture seekers |College crews chasing adventure | Solo travelers craving calm | Families & first-time explorers | Photographers & storytellers',
                                         'Mumbai to Hospete (Non AC Sleeper & 3AC train) | Hospete to Mumbai (Non AC Sleeper & 3AC train) | Scooter & Bicycle for Sightseeing (As per itinerary)',
@@ -788,7 +788,7 @@
                         </div>
                         <div class="text-center p-4">
                             <h3 class="mb-0" style="color: #000000; font-family: 'Albra', serif;">
-                                <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/-
+                                <!-- <span style="font-size: 0.5em; font-family: 'Albra', serif;">Starting from</span> ₹ 7,799.00/- -->
                               </h3>
                             <div class="mb-3" >
                                 <!-- <small class="fa fa-star" style="color: #FE8800 !important;"></small>
@@ -806,8 +806,8 @@
                                         'img/udaipur_2.jpeg', 
                                         'Whitewashed havelis, glimmering lakes, and timeless palaces… Welcome to Udaipur – the “City of Lakes.” From the grandeur of City Palace to serene sunsets at Fateh Sagar, Udaipur is romance, heritage, and art woven into one. This isn’t just a trip. It’s a story. A dive into royal charm, winding lanes, and soulful vibes that linger long after you leave.', 
                                         'We don’t just take you there – we let you live it. Cozy stays amidst nature & local warmth. Small groups for big connections – no rushed tours. Hassle-free planning & safe routes. Every trip packed with moments, memories & magic',
-                                        '₹ 7,799.00/- Per person',
-                                        '5th - 20th Oct | 1st - 06th Nov | 12th - 17th Nov | 24th - 29th Dec | 2nd - 7th Jan | 18th - 23rd Jan',
+                                        '',
+                                        'coming soon',
                                         '🎒 We don’t just show you Udaipur – we immerse you in it. | 🏡 Heritage-inspired stays with a local touch | 👫 Travel in small, cozy groups – no touristy rush | 🌐 Hassle-free coordination + safety-first routes | 🎉 Every trip filled with stories, laughter & hidden gems',
                                         'Backpackers chasing heritage vibes | Couples & first-time explorers | Families & culture enthusiasts | Workaholics craving a soulful escape | Photographers & storytellers',
                                         'Mumbai to Udaipur (Non AC Sleeper & 3AC train options) | Udaipur to Mumbai (Non AC Sleeper & 3AC train options) | Local sightseeing by private vehicle / auto for short hops',
